docs-archive/apache-airflow-providers-apache-kafka/2.0.0/_sources/_api/airflow/providers/apache/kafka/triggers/await_message/index.rst.txt
airflow.providers.apache.kafka.triggers.await_message
=====================================================

.. py:module:: airflow.providers.apache.kafka.triggers.await_message


Attributes
----------

.. autoapisummary::

   airflow.providers.apache.kafka.triggers.await_message.log


Classes
-------

.. autoapisummary::

   airflow.providers.apache.kafka.triggers.await_message.AwaitMessageTrigger


Module Contents
---------------

.. py:data:: log

.. py:class:: AwaitMessageTrigger(topics, apply_function = None, kafka_config_id = 'kafka_default', apply_function_args = None, apply_function_kwargs = None, poll_timeout = 1, poll_interval = 5, commit_offset = True)

   Bases: :py:obj:`airflow.triggers.base.BaseEventTrigger`


   A trigger that waits for a message matching specific criteria to arrive in Kafka.

   The behavior of the consumer of this trigger is as follows:
   - poll the Kafka topics for a message, if no message returned, sleep
   - process the message with provided callable:

       - if callable is provided and returns any data, raise a TriggerEvent with the return data
       - else raise a TriggerEvent with the original message

   - by default, the message offset is committed after processing. This can be
     disabled by setting ``commit_offset=False``, allowing manual offset management
     in downstream tasks.

   :param kafka_config_id: The connection object to use, defaults to "kafka_default"
   :param topics: The topic (or topic regex) that should be searched for messages
   :param apply_function: the location of the function to apply to messages for determination of matching
       criteria. (In python dot notation as a string)
   :param apply_function_args: A set of arguments to apply to the callable, defaults to None
   :param apply_function_kwargs: A set of key word arguments to apply to the callable, defaults to None,
       defaults to None
   :param poll_timeout: How long the Kafka client should wait before returning from a poll request to
       Kafka (seconds), defaults to 1
   :param poll_interval: How long the trigger should sleep after reaching the end of the Kafka log
       (seconds), defaults to 5
   :param commit_offset: Whether to commit the message offset after poll.
       If set to False, the offset is not committed automatically, allowing
       downstream tasks to handle offset committing manually (e.g., after
       successful processing). Defaults to True.



   .. py:attribute:: topics


   .. py:attribute:: apply_function
      :value: None



   .. py:attribute:: apply_function_args
      :value: ()



   .. py:attribute:: apply_function_kwargs


   .. py:attribute:: kafka_config_id
      :value: 'kafka_default'



   .. py:attribute:: poll_timeout
      :value: 1



   .. py:attribute:: poll_interval
      :value: 5



   .. py:attribute:: commit_offset
      :value: True



   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



   .. py:method:: cleanup()
      :async:


      Cleanup the trigger.

      Called when the trigger is no longer needed, and it's being removed
      from the active triggerer process.

      This method follows the async/await pattern to allow to run the cleanup
      in triggerer main event loop. Exceptions raised by the cleanup method
      are ignored, so if you would like to be able to debug them and be notified
      that cleanup method failed, you should wrap your code with try/except block
      and handle it appropriately (in async-compatible way).



